# universal-adversarial-cloak

./: README.md  pyproject.toml  requirements.txt
docs/: visioncloak_v1_overview.md
visioncloak/: project.py
