[project]
name = "visioncloak"
version = "1.0.0"
description = "VisionCloak: adversarial image cloaking for modern vision-language systems with CPU-first multi-surrogate optimization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch==2.6.0",
    "gradio==6.12.0",
    "hf_xet==1.4.3",
    "huggingface-hub==0.36.2",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "numpy==1.26.4",
    "pillow==10.2.0",
    "scikit-image==0.24.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformers==4.41.2",
    "pytorch-msssim==1.0.0",
    "timm>=1.0.26",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
markers = [
    "integration: tests that exercise the real facenet-pytorch models and sample portraits",
]
